--- a/huacss2.css
+++ b/huacss2.css
@@ -51,6 +51,52 @@ img{width: 100%;
 
 }
 
+.test2 figcaption{
+    width:100%;height: 100%
+}
+.test2 figcaption h2{
+    margin-top: 10%;margin-left: 15%;text-align: center;vertical-align: middle;color: red;
+}
+.test2:active  img{
+    transform: scale(1.2,1.2);opacity: 0.5
+}
+
+.test2:active figcaption h2{
+    transform: scale(1.2,1.2);
+
+}
+
+
+
+
+.test3 figcaption{
+    width:100%;height: 100%
+}
+.test3 figcaption h2{
+    margin-top: 10%;margin-left: 15%;text-align: center;vertical-align: middle;color: red;
+}
+.test3:active  img{
+    transform: scale(1.2,1.2);opacity: 0.5
+}
+
+.test3:active figcaption h2{
+    transform: scale(1.2,1.2);
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #text_input {
     width:90%; height: 36px;border: 1px solid coral;border-radius: 4px;
 }
