--- a/huacss2.css
+++ b/huacss2.css
@@ -43,7 +43,16 @@ img{width: 100%;
     margin-top: 10%;margin-left: 15%;text-align: center;vertical-align: middle;color: red;
 }
 .test1:active  img{
-    transform: scale(1.2,1.2);opacity: 0.5
+    transform: scale(1.2,1.2);
+    -ms-transform:scale(1.2,1.2); /* IE 9 */
+    -moz-transform:scale(1.2,1.2); /* Firefox */
+    -webkit-transform:scale(1.2,1.2); /* Safari and Chrome */
+    -o-transform:scale(1.2,1.2); /* Opera */
+
+    filter:alpha(opacity=50); /* IE */
+    -moz-opacity:0.5; /* 老版Mozilla */
+    -khtml-opacity:0.5; /* 老版Safari */
+    opacity: 0.5; /* 支持opacity的浏览器*/
 }
 
 .test1:active figcaption h2{
@@ -51,38 +60,6 @@ img{width: 100%;
 
 }
 
-.test2 figcaption{
-    width:100%;height: 100%
-}
-.test2 figcaption h2{
-    margin-top: 10%;margin-left: 15%;text-align: center;vertical-align: middle;color: red;
-}
-.test2:active  img{
-    transform: scale(1.2,1.2);opacity: 0.5
-}
-
-.test2:active figcaption h2{
-    transform: scale(1.2,1.2);
-
-}
-
-
-
-
-.test3 figcaption{
-    width:100%;height: 100%
-}
-.test3 figcaption h2{
-    margin-top: 10%;margin-left: 15%;text-align: center;vertical-align: middle;color: red;
-}
-.test3:active  img{
-    transform: scale(1.2,1.2);opacity: 0.5
-}
-
-.test3:active figcaption h2{
-    transform: scale(1.2,1.2);
-
-}
 
 
 
