--- a/huacss2.css
+++ b/huacss2.css
@@ -21,21 +21,28 @@ img{width: 100%;
 }
 
 .columns {
-    width: 100%;
+    width: 94%;
     column-width: auto;
     margin: 6px auto;
+    line-height: 40px;
     -webkit-column-count:3;
     -moz-column-count:3;
     -o-column-count:3;
     -ms-column-count:3;
     column-count:3;
+    border:10px solid #fff;
     /*-webkit-column-rule: 2px dotted green;*/
     /*-moz-column-rule: 2px dotted green;*/
     /*-o-column-rule: 2px dotted green;*/
     /*-ms-column-rule: 2px dotted green;*/
     /*column-rule: 2px dotted green;*/
 }
-
+.test1 {
+    border-radius: 4px;border:none;
+}
+.test1 img{
+    border-radius: 4px;border:none;
+}
 .test1 figcaption{
     width:100%;height: 100%
 }
@@ -43,16 +50,17 @@ img{width: 100%;
     margin-top: 10%;margin-left: 15%;text-align: center;vertical-align: middle;color: red;
 }
 .test1:active  img{
-    transform: scale(1.2,1.2);
-    -ms-transform:scale(1.2,1.2); /* IE 9 */
-    -moz-transform:scale(1.2,1.2); /* Firefox */
-    -webkit-transform:scale(1.2,1.2); /* Safari and Chrome */
-    -o-transform:scale(1.2,1.2); /* Opera */
+    border-radius: 4px;border:none;
+    transform: scale(0.96,0.96);
+    -ms-transform:scale(0.96,0.96); /* IE 9 */
+    -moz-transform:scale(0.96,0.96); /* Firefox */
+    -webkit-transform:scale(0.96,0.96); /* Safari and Chrome */
+    -o-transform:scale(0.96,0.96); /* Opera */
 
-    filter:alpha(opacity=50); /* IE */
-    -moz-opacity:0.5; /* 老版Mozilla */
-    -khtml-opacity:0.5; /* 老版Safari */
-    opacity: 0.5; /* 支持opacity的浏览器*/
+    filter:alpha(opacity=100); /* IE */
+    -moz-opacity:1; /* 老版Mozilla */
+    -khtml-opacity:1; /* 老版Safari */
+    opacity: 1; /* 支持opacity的浏览器*/
 }
 
 .test1:active figcaption h2{
@@ -76,9 +84,10 @@ img{width: 100%;
 
 #text_input {
     width:90%; height: 36px;border: 1px solid coral;border-radius: 4px;
+    margin-top: 20px;
 }
 #text_buy {
-    width:90%; height: 46px;background-color: red;margin-top: 10px;
+    width:90%; height: 46px;background-color: red;margin-top: 20px;
     font-size:20px;color: #FFFFFF;border-radius: 4px;border:none;
     margin-bottom: 20px;opacity: 0.8
     /*-webkit-box-shadow: 0px 9px 0px red, 0px 9px 25px rgba(0,0,0,.7);*/
@@ -89,4 +98,9 @@ img{width: 100%;
     /*-webkit-box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);*/
     /*-moz-box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);*/
     /*box-shadow: 0px 3px 0px rgba(219,31,5,1), 0px 3px 6px rgba(0,0,0,.9);*/
-    transform: scale(0.96,0.96);opacity: 1}
+    transform: scale(1.1,1.1);
+    -ms-transform:scale(1.1,1.1); /* IE 9 */
+    -moz-transform:scale(1.1,1.1); /* Firefox */
+    -webkit-transform:scale(1.1,1.1); /* Safari and Chrome */
+    -o-transform:scale(1.1,1.1); /* Opera */
+    transform: scale(1.1,1.1);opacity: 1}
